# PyNewsServer

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  SSL_CERTIFICATE_STATUS.md  SSL_STATUS_UPDATE.md  TRAEFIK_SETUP.md  docker-compose.yaml  main.py  openapi.json  pynewsdb.db  pyproject.toml  requirements.txt  scanapi.conf
.github/workflows/: docs.yml
app/: enums.py  main.py  schemas.py
app/routers/: authentication.py  router.py
app/routers/admin/: admin.py  routes.py
app/routers/healthcheck/: routes.py
app/routers/libraries/: routes.py
app/routers/news/: routes.py
app/services/: auth.py  encryption.py
app/services/database/: communities.py  community.py  database.py  libraries.py  run_seeder.py  seeder.py
docs/: api.md  conf.py  index.md  readme.md  sqlite-setup.md
scanapi/: libraries_authenticated.yaml  libraries_unauthenticated.yaml  news_authenticated.yaml  news_unauthenticated.yaml  scanapi-report.html  scanapi.yaml
scanapi/tests/: body_healthcheck_status_healthy.yaml  body_is_array.yaml  status_code_is_401.yaml
scanapi/tests/authentication/: body_detail_not_authenticated.yaml
scanapi/tests/healthcheck/: body_status_healthy.yaml
scanapi/tests/libraries/: body_status_created.yaml  body_status_requested.yaml  (+1 more)
schemas/: schemas.py
scripts/: README.md  add_community.py  create_community.py  example_create_community.py  export_openapi.py
tests/: conftest.py  test_admin.py  test_auth.py  test_communities.py  test_data.py  test_database.py  test_encryption.py  test_healthcheck.py  test_libraries.py  test_libraries_request.py  test_news.py  test_subscriptions.py
traefik/: README.md  acme.json  dynamic.yml  traefik.yml
(+12 files in other folders)
